<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            style="@style/CardViewQuiz"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                android:src="@drawable/quiz_crianca_na_moto" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_002"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbQ2A"
                style="@style/QuizAnswerOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuizAnswer"
                android:text="@string/quiz_002A" />

            <RadioButton
                android:id="@+id/rbQ2B"
                style="@style/QuizAnswerOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuizAnswer"
                android:text="@string/quiz_002B" />

            <RadioButton
                android:id="@+id/rbQ2C"
                style="@style/QuizAnswerOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuizAnswer"
                android:text="@string/quiz_002C" />

        </RadioGroup>

        <Button
            android:id="@+id/btnNextQuiz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btn_next" />
    </LinearLayout>
</ScrollView>